tests/baselines/reference/constructorParameterProperties.errors.txt
constructorParameterProperties.ts(7,9): error TS2454: Variable 'c' is used before being assigned.
constructorParameterProperties.ts(8,10): error TS2454: Variable 'c' is used before being assigned.
constructorParameterProperties.ts(8,12): error TS2341: Property 'x' is private and only accessible within class 'C'.
constructorParameterProperties.ts(9,10): error TS2454: Variable 'c' is used before being assigned.
constructorParameterProperties.ts(9,12): error TS2445: Property 'z' is protected and only accessible within class 'C' and its subclasses.
constructorParameterProperties.ts(17,9): error TS2454: Variable 'd' is used before being assigned.
constructorParameterProperties.ts(18,10): error TS2454: Variable 'd' is used before being assigned.
constructorParameterProperties.ts(18,12): error TS2341: Property 'x' is private and only accessible within class 'D<T>'.
constructorParameterProperties.ts(19,10): error TS2454: Variable 'd' is used before being assigned.
constructorParameterProperties.ts(19,12): error TS2339: Property 'a' does not exist on type 'D<string>'.
constructorParameterProperties.ts(20,10): error TS2454: Variable 'd' is used before being assigned.
constructorParameterProperties.ts(20,12): error TS2445: Property 'z' is protected and only accessible within class 'D<T>' and its subclasses.


==== constructorParameterProperties.ts (12 errors) ====
    class C {
        y: string;
        constructor(private x: string, protected z: string) { }
    }
    
    var c: C;
    var r = c.y;
            ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r2 = c.x; // error
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
               ~
!!! error TS2341: Property 'x' is private and only accessible within class 'C'.
    var r3 = c.z; // error
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
               ~
!!! error TS2445: Property 'z' is protected and only accessible within class 'C' and its subclasses.
    
    class D<T> {
        y: T;
        constructor(a: T, private x: T, protected z: T) { }
    }
    
    var d: D<string>;
    var r = d.y;
            ~
!!! error TS2454: Variable 'd' is used before being assigned.
    var r2 = d.x; // error
             ~
!!! error TS2454: Variable 'd' is used before being assigned.
               ~
!!! error TS2341: Property 'x' is private and only accessible within class 'D<T>'.
    var r3 = d.a; // error
             ~
!!! error TS2454: Variable 'd' is used before being assigned.
               ~
!!! error TS2339: Property 'a' does not exist on type 'D<string>'.
    var r4 = d.z; // error
             ~
!!! error TS2454: Variable 'd' is used before being assigned.
               ~
!!! error TS2445: Property 'z' is protected and only accessible within class 'D<T>' and its subclasses.
    